rnsc/tests/snapshots/error-parser-type_hints-utf8-trailing_tokens.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @utf8 value unexpected_second_operand
.super java/lang/Object
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@utf8'
   ╭─[ test_data/rns_integration/error/parser/type_hints/utf8/trailing_tokens.rns:1:20 ]
   │
 1 │ .class @utf8 value unexpected_second_operand
   │        ──┬──       ────────────┬────────────  
   │          ╰──────────────────────────────────── '@utf8' type hint takes 1 operand
   │                                │              
   │                                ╰────────────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
----- JAVAP -----
not generated
