rnsc/tests/snapshots/error-parser-type_hints-zero_index-trailing_tokens_recovers.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @zero_idx tailing_token
; should report no .super defined warning
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@zero_idx'
   ╭─[ test_data/integration/error/parser/type_hints/zero_index/trailing_tokens_recovers.rns:1:18 ]
   │
 1 │ .class @zero_idx tailing_token
   │        ────┬──── ──────┬──────  
   │            ╰──────────────────── '@zero_idx' type hint takes 0 operands
   │                        │        
   │                        ╰──────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-013
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/integration/error/parser/type_hints/zero_index/trailing_tokens_recovers.rns:1:1 ]
   │
 1 │ .class @zero_idx tailing_token
   │ ───┬──  
   │    ╰──── class 'Some(ZeroIndex(Span { byte_start: 7, byte_end: 16, line: 0, col_start: 7, col_end: 16 }))' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
not generated
