rnsc/tests/snapshots/general-ClassWithAnnotationFlag.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class annotation MyAnnotation
.super java/lang/Object

.class_end
----- INPUT -----
.class annotation MyAnnotation
.super java/lang/Object
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyAnnotation.class
  Last modified <DATE>; size 64 bytes
  SHA-256 checksum 5041f612632558c4269554eef6507f52ef0adeba36eae7b9c8aacf431220d0d6
class MyAnnotation
  minor version: 0
  major version: 69
  flags: (0x2000) ACC_ANNOTATION
  this_class: #3                          // MyAnnotation
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyAnnotation
  #4 = Utf8               MyAnnotation
{
}
