rnsc/tests/snapshots/general-ClassWithPublicAnnotationFlag.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public annotation MyAnnotation
.super java/lang/Object

.class_end
----- INPUT -----
.class public annotation MyAnnotation
.super java/lang/Object
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyAnnotation.class
  Last modified <DATE>; size 64 bytes
  SHA-256 checksum 27307dceaf6791f5e388ba51e47677cfd5cdf20e81795aa3ad2a4a9e4a6d23ce
public class MyAnnotation
  minor version: 0
  major version: 69
  flags: (0x2001) ACC_PUBLIC, ACC_ANNOTATION
  this_class: #3                          // MyAnnotation
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyAnnotation
  #4 = Utf8               MyAnnotation
{
}
