rnsc/tests/snapshots/general-ClassWithSuperNoMethods.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MyClass
.super java/lang/Object

.class_end
----- INPUT -----
.class MyClass
.super java/lang/Object
.class_end
----- STDERR -----

----- JAVAP -----
Classfile <TEMP_DIR>/MyClass.class
  Last modified <DATE>; size 66 bytes
  SHA-256 checksum 4be7efa408f78e38c9ed3d9a3961b5579eaf9fd68b8af6e4676b68c273dc0fc3
class MyClass
  minor version: 0
  major version: 69
  flags: (0x0000)
  this_class: #3                          // MyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // MyClass
  #4 = Utf8               MyClass
  #5 = Utf8               Code
{
}
